cargo-features = ["edition2021"]

[package]
name = "custard-core"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
custard-macros = { path = "../custard-macros" }
custard-use = { path = "../custard-use" }

[patch."https://github.com/ashlotl/custard-core"]
custard-macros = { git = "https://github.com/ashlotl/custard-macros", branch = "main" }
custard-use = { git = "https://github.com/ashlotl/custard-use", branch = "main" }

# Here go all the crates that should submit Tasks and Datachunks.